manifests/ldap-ui/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ldap-ui
  labels:
    app: ldap-ui
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ldap-ui
    spec:
      containers:
        - name: ldap-ui
          image: ektar/ldap-ui:0.7.1
          volumeMounts:
            - name: phpldapadmin-certs
              mountPath: /container/service/phpldapadmin/assets/apache2/certs
            - name: ldap-client-certs
              mountPath: /container/service/ldap-client/assets/certs
          ports:
            - containerPort: 80
      volumes:
        - name: phpldapadmin-certs
          emptyDir: {}
        - name: ldap-client-certs
          emptyDir: {}
