manifests/ldap-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ldap-ui
  name: ldap-ui
spec:
  ports:
    - port: 80
  selector:
    app: ldap-ui
