manifests/ldap-ui/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ldap-ui
spec:
  backend:
    serviceName: ldap-ui
    servicePort: 443
